--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "https": "^1.0.0",
-    "lighthouse": "^12.0.0",
+    "lighthouse": "11.3.0",
     "puppeteer": "21.7.0"
   },
   "devDependencies": {
