--- a/packages/performance/package.json
+++ b/packages/performance/package.json
@@ -2,8 +2,10 @@
   "name": "performance",
   "version": "0.0.1",
   "description": "package",
+  "type": "module",
   "scripts": {
-    "dev": "tsx ./src/index.ts"
+    "dev": "tsc --watch",
+    "build": "tsc"
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
