--- a/packages/performance/tsconfig.json
+++ b/packages/performance/tsconfig.json
@@ -2,11 +2,13 @@
   "compilerOptions": {
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true,
-    "module": "ESNext",
-    "target": "ESNext",
+    "module": "Node16",
+    "target": "ES2020",
     "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true
+    "moduleResolution": "Node16",
+    "esModuleInterop": true,
+    "declaration": true,
+    "rootDir": "src",
+    "outDir": "lib"
   }
 }
