--- a/packages/puppelight/package.json
+++ b/packages/puppelight/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "performance",
+  "name": "puppelight",
   "version": "0.0.1",
-  "description": "package",
+  "description": "automated performance testing tools",
   "type": "module",
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc"
+    "build": "tsc",
+    "serve": "serve .",
+    "bin": "node ./bin/index.js"
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -16,6 +18,10 @@
   ],
   "dependencies": {
     "lighthouse": "^12.2.0",
-    "puppeteer": "^23.0.2"
+    "puppeteer": "^23.0.2",
+    "serve": "^14.2.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
