--- a/packages/puppelight/package.json
+++ b/packages/puppelight/package.json
@@ -4,10 +4,9 @@
   "description": "automated performance testing tools",
   "type": "module",
   "scripts": {
-    "dev": "tsc --watch",
-    "build": "tsc",
-    "serve": "serve .",
-    "bin": "node ./bin/index.js"
+    "dev": "rm -rf lib && tsc --watch",
+    "build": "rm -rf lib && tsc",
+    "node": "npm run build && node ./bin/index.js"
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -17,11 +16,21 @@
     "./bin"
   ],
   "dependencies": {
+    "commander": "^12.1.0",
+    "dotenv": "^16.4.5",
+    "koa": "^2.15.3",
+    "koa-static": "^5.0.0",
     "lighthouse": "^12.2.0",
-    "puppeteer": "^23.0.2",
-    "serve": "^14.2.4"
+    "nodemailer": "^6.9.16",
+    "puppeteer": "^23.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.3",
+    "@types/koa": "^2.15.0",
+    "@types/koa-static": "^4.0.4",
+    "@types/nodemailer": "^6.4.16"
   }
 }
