feat: 支持传入smtp账密

--- a/packages/puppelight/.env
+++ b/packages/puppelight/.env
@@ -1,4 +1,2 @@
-SSLPORT=465
-SSLURL=smtp.qq.com
-QQEMAIL=903040380@qq.com
-SMTP=ifnjdasdpjbhbead
+SMTP_EMAIL=903040380@qq.com
+SMTP_PASSWORD=ifnjdasdpjbhbead
